--- a/nginx.yaml
+++ b/nginx.yaml
@@ -9,5 +9,5 @@
     
     - name: start nginx service
       ansible.builtin.service:
-        name: start nginx service
+        name: nginx
         state: started
