--- a/vars_from_file.yaml
+++ b/vars_from_file.yaml
@@ -5,4 +5,4 @@
   tasks:
   - name: vars from files experiment
     ansible.builtin.debug:
-     msg: "hi {{trainee}}, Be consistent in learning  {{course}} and remember {{quote}}"
+     msg: "hi {{trainee}}, Be consistent in learning  {{course}} and remember '{{quote}}'"
