--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,10 @@
 [web]
 172.31.21.42
+
+[localhost]
+localhost
+
+[localhost:vars]
+course: "DevOps"
+trainee: "Dhatri"
+quote: "practise makes man perfect"
