experimenting with vars from inventory

--- a/inventory.ini
+++ b/inventory.ini
@@ -5,6 +5,6 @@
 localhost
 
 [localhost:vars]
-course: "DevOps"
-trainee: "Dhatri"
-quote: "practise makes man perfect"
+course= "DevOps"
+trainee= "Dhatri"
+quote= "practise makes man perfect"
