--- a/vars_from_inventory.yaml
+++ b/vars_from_inventory.yaml
@@ -1,6 +1,6 @@
-- name: Var from other file
+- name: Var from inventory
   hosts: localhost
   tasks:
-  - name: vars from files experiment
+  - name: vars from inventory experiment
     ansible.builtin.debug:
      msg: "hi {{trainee}}, Be consistent in learning  {{course}} and remember '{{quote}}'"
