--- a/filter.yaml
+++ b/filter.yaml
@@ -16,5 +16,13 @@
       NUMBERS: [1,3,5,2,3,4,6,5,6]
     ansible.builtin.debug:
       msg: "Unique list: {{NUMBERS | unique}}"
-
+  
+  - name: check given number is less than 10
+    var_prompt:
+      name: number
+      prompt: Enter a number
+      privacy: false
+    ansible.builtin.debug:
+      msg: "Given number {{number}} is less than 10"
+    when: number | int < 0
   
