--- a/filter.yaml
+++ b/filter.yaml
@@ -24,5 +24,10 @@
   - name: check given number is less than 10
     ansible.builtin.debug:
       msg: "Given number {{number}} is less than 10"
-    when: number | int < 0
+    when: number | int < 10
+
+    - name: check given number is greater than 10
+    ansible.builtin.debug:
+      msg: "Given number {{number}} is greater than or equal to 10"
+    when: number | int >= 10
   
