--- a/filter.yaml
+++ b/filter.yaml
@@ -34,4 +34,32 @@
   - name: Print default
     ansible.builtin.debug:
       msg: "Hi {{Name | default('Dhatri') }}"
+
+  - name: print min and max
+    vars:
+      ages: [25, 35, 67, 89]
+    ansible.builtin.debug:
+      msg: " min age: {{ ages | min }}, max age: {{ ages | max }}"
+
+  - name: convert dictionary into items/list
+    vars:
+     my_dict: # this is called as dictionary or map or key/value pairs.
+       Course: Ansbile
+       Trainer: Sivakumar
+       Duration: 120hr  
+    ansible.builtin.debug:
+      msg: "Before convert: {{ my_dict }}"
+    ansible.builtin.debug:
+      msg: "After convert: {{ my_dict | dict2items }}"
+
+  - name: convert items to dictionary
+    vars:
+      my_list:
+      - {'key': 'Course', 'value': 'Ansbile'}
+      - {'key': 'Trainer', 'value': 'Sivakumar'}
+      - {'key': 'Duration', 'value': '120hr'}
+    ansible.builtin.debug:
+      msg: "Before convert: {{ my_list }}"
+    ansible.builtin.debug:
+      msg: "After convert: {{ my_list | items2dict }}"
   
