--- a/filter.yaml
+++ b/filter.yaml
@@ -2,6 +2,14 @@
   hosts: localhost
   vars:
     COURSE: DevOps
+    my_list:
+    - {'key': 'Course', 'value': 'Ansbile'}
+    - {'key': 'Trainer', 'value': 'Sivakumar'}
+    - {'key': 'Duration', 'value': '120hr'}
+    my_dict: # this is called as dictionary or map or key/value pairs.
+      Course: Ansbile
+      Trainer: Sivakumar
+      Duration: 120hr  
   vars_prompt:
   - name: number
     prompt: Enter a number
@@ -42,24 +50,18 @@
       msg: " min age: {{ ages | min }}, max age: {{ ages | max }}"
 
   - name: convert dictionary into items/list
-    vars:
-     my_dict: # this is called as dictionary or map or key/value pairs.
-       Course: Ansbile
-       Trainer: Sivakumar
-       Duration: 120hr  
     ansible.builtin.debug:
       msg: "Before convert: {{ my_dict }}"
+
+  - name: convert dictionary into items/list
     ansible.builtin.debug:
       msg: "After convert: {{ my_dict | dict2items }}"
 
   - name: convert items to dictionary
-    vars:
-      my_list:
-      - {'key': 'Course', 'value': 'Ansbile'}
-      - {'key': 'Trainer', 'value': 'Sivakumar'}
-      - {'key': 'Duration', 'value': '120hr'}
     ansible.builtin.debug:
       msg: "Before convert: {{ my_list }}"
+  
+  - name: convert items to dictionary
     ansible.builtin.debug:
       msg: "After convert: {{ my_list | items2dict }}"
   
