--- a/loops.yaml
+++ b/loops.yaml
@@ -3,8 +3,8 @@
   tasks:
   - name: install softwares
     ansible.builtin.dnf:
-      name: {{item.name}}
-      state: {{item.state}}
+      name: "{{item.name}}"
+      state: "{{item.state}}"
     loop:
       - {name: mysql, state: latest}
       - {name: postfix, state: absent}
