--- a/loops.yaml
+++ b/loops.yaml
@@ -7,6 +7,6 @@
       name: "{{item.name}}"
       state: "{{item.state}}"
     loop:
-      - {name: mysql, state: latest}
-      - {name: postfix, state: absent}
-      - {name: nginx, state: latest}
+      - {name: mysql, state: absent}
+      - {name: postfix, state: latest}
+      - {name: nginx, state: absent}
